# S1MCPServer

./: .gitignore  README.md  S1MCPServer.sln
S1MCPClient/: .gitignore  README.md  TEST_USAGE.md  game_config.json.example  pyproject.toml  requirements.txt  test_comprehensive.py  test_get_player.py
S1MCPClient/src/: __init__.py  main.py  pipe_client.py  protocol.py  tcp_client.py
S1MCPClient/src/models/: __init__.py  acknowledgment.py  request.py  response.py
S1MCPClient/src/tools/: __init__.py  debug_tools.py  game_lifecycle_tools.py  game_state_tools.py  item_tools.py  npc_tools.py  player_tools.py  property_tools.py  s1api_docs_tools.py  vehicle_tools.py
S1MCPClient/src/utils/: __init__.py  config.py  logger.py
S1MCPClient/tests/: __init__.py  test_pipe_client.py
S1MCPServer/: MainMod.cs  README.md  S1MCPServer.csproj  S1MCPServer.sln
S1MCPServer/Core/: CommandQueue.cs  CommandRouter.cs  ProtocolHandler.cs  ResponseQueue.cs  ValidationHelper.cs
S1MCPServer/Handlers/: DebugCommandHandler.cs  GameStateCommandHandler.cs  HandshakeCommandHandler.cs  ItemCommandHandler.cs  NPCCommandHandler.cs  PlayerCommandHandler.cs  PropertyCommandHandler.cs  VehicleCommandHandler.cs
S1MCPServer/Helpers/: Utils.cs
S1MCPServer/Integrations/: UnityExplorerIntegration.cs
S1MCPServer/Models/: Acknowledgment.cs  CommandResult.cs  ErrorResponse.cs  Position.cs  Request.cs  Response.cs
S1MCPServer/Server/: NamedPipeServer.cs  TcpServer.cs
S1MCPServer/Utils/: CrossRuntimeTypeHelper.cs  ModLogger.cs  ObjectSerializer.cs  ReflectionEngine.cs  ReflectionHelper.cs  (+2 more)
(+16 files in other folders)
