[project]
name = "s1mcpclient"
version = "0.1.0"
description = "MCP server for Schedule I game mod integration"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=0.9.0",
    "pywin32>=306",
    "pydantic>=2.0.0",
]

[project.scripts]
s1mcpclient = "src.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

